[metadata]
name = mdsim
version = 0.0.0
author = Armin Ariamajd
author_email = a.ariamajd@gmail.com
description = MDSim is a package for molecular dynamics simulations.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Armin-Ariamajd/duq
project_urls =
    Bug Tracker = https://github.com/Armin-Ariamajd/duq/issues
license = GNU Affero General Public License v3
license_file = LICENSE
platform = any
keywords = Molecular dynamics, MD, simulation, MD simulation
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Intended Audience :: Education
    Natural Language :: English
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6
install_requires = ipython; matplotlib; numpy; pandas
include_package_data = true

[options.packages.find]
where = .